feat(native): migrate native-image metadata to reachability-metadata.json (NATIVE-META-001)
Every published krpc jar now ships its native-image metadata at the standard,
auto-detected location META-INF/native-image/tech.krpc/<artifactId>/ instead of
pointing at it with -H:ReflectionConfigurationResources /
-H:DynamicProxyConfigurationResources from native-image.properties. Both options
are deprecated AND experimental on Mandrel/GraalVM 25, so every consumer build
emitted a warning per krpc jar per module (field-reported: 10 services on JDK 25 +
Mandrel 25.0.3.0-Final). Measured on the real jars: 6 warning lines -> 1.

Each directory carries the modern combined reachability-metadata.json (GraalVM/
Mandrel 24+, dynamic proxies as {"type": {"proxy": [...]}} inside the reflection
array) AND the legacy reflect-config.json / proxy-config.json. The legacy pair is
load-bearing, not vestigial: GraalVM/Mandrel 21-23 do not know the combined file
and ignore it SILENTLY - no warning, no error, just an unregistered type that
throws ClassNotFoundException at native runtime. krpc's Java baseline is JDK 21,
so shipping only the modern file would un-register every framework type for those
consumers with no build-time signal. Verified on a local toolchain matrix (GraalVM
21.0 vs 25.0.3, reflection + proxy probes, metadata-stripped jars as the negative
control) - matrix recorded in native-image.md 13.6.

native-image.properties survives only where it carried non-metadata Args:
rpc-common's --initialize-at-run-time list and the rpc-server-* builder
-J--add-exports. rpc-api and rpc-client no longer need one.

No metadata entry changed meaning: 35 reflection types + 1 proxy interface list
migrated, old-vs-new set equality asserted per module (rpc-api 2, rpc-client 2+1
proxy, rpc-common 26 = the reflection-config.json + reflection-grpc.json merge,
rpc-server-quarkus 3, rpc-server-spring 2). All five reachability-metadata.json
validate against the GraalVM 25 schema v1.2.0.

Also fixes a la